<resources>
    <string name="app_name">BTMS Careers</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="email_label">Email</string>
    <string name="email_hint">Enter your email</string>
    <string name="login_btn_text">Login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings for job portal -->
    <string name="job_search_field_hint">Leave blank to search all vacancies</string>
    <string name="job_search_button_text">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
